--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 server.port=8090
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/hourse?characterEncoding=UTF-8
+spring.datasource.userName = root
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+
+mybatis.config-location=classpath:/mybatis/mybatis-config.xml
+
+
