--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,14 @@
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 
+		<!-- druid -->
+		<!--Druid是阿里巴巴的一个开源项目，号称为监控而生的数据库连接池，在功能、性能、扩展性方面都超过其他例如DBCP、C3P0、BoneCP、Proxool、JBoss
+		 DataSource等连接池,而且Druid已经在阿里巴巴部署了超过600个应用-->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>1.1.10</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
