--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8090
 
-#tomcat连接池
+#Tomcat 连接池
 #spring.datasource.url=jdbc:mysql://localhost:3306/house?characterEncoding=UTF-8
 #spring.datasource.userName = root
 #spring.datasource.password = 123456
@@ -8,6 +8,11 @@ server.port=8090
 
 #整合mybatis
 mybatis.config-location=classpath:/mybatis/mybatis-config.xml
+#配置实体类的位置
+mybatis.type-aliases-package=com.mooc.house.common.model
+#xml文件位置
+mybatis.mapper-locations=classpath:mapper/*.xml
+
 
 #表明使用Druid连接池
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
