--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,27 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<!-- mybatis逆向工程插件 -->
+			<plugin>
+				<groupId>org.mybatis.generator</groupId>
+				<artifactId>mybatis-generator-maven-plugin</artifactId>
+				<version>1.3.2</version>
+				<dependencies>
+					<dependency>
+						<groupId>mysql</groupId>
+						<artifactId>mysql-connector-java</artifactId>
+						<version>5.1.6</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<!--配置文件的路径-->
+					<configurationFile>src/main/resources/generator/generatorConfig.xml</configurationFile>
+					<!--允许移动生成的文件-->
+					<verbose>true</verbose>
+					 <!--是否覆盖，true表示会替换生成的Java文件，false则不覆盖-->
+					<overwrite>true</overwrite>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
-
 </project>
