--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,8 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 #mysql数据库连接信息配置
 #mysql驱动
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#mysql驱动2
+spring.datasource.driverClassName2=com.mysql.jdbc.Driver
 #数据库连接信息
 spring.datasource.url=jdbc:mysql://localhost:3306/house?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
 #数据库用户名
